--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "file-upload-using-nodejs",
   "version": "1.0.0",
-  "description": "Simple File Upload using Node.js",
+  "description": "File upload using Node.js",
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -11,13 +11,12 @@
     "url": "git+https://github.com/narayanants/file-upload-using-nodejs.git"
   },
   "keywords": [
-    "Simple",
-    "File",
-    "Upload",
+    "Fiel",
+    "Uplaod",
     "using",
     "Node.js"
   ],
-  "author": "Narayanan <narayanan.subramanian@softcrylic.co.in>",
+  "author": "Narayanan Ts",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/narayanants/file-upload-using-nodejs/issues"
@@ -26,5 +25,6 @@
   "dependencies": {
     "express": "^4.15.2",
     "formidable": "^1.1.1"
-  }
+  },
+  "devDependencies": {}
 }
